platform/ingress/my-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-api-ingress
  namespace: development

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"

spec:
  ingressClassName: nginx

  rules:
    - host: api.dev.localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: my-api-dev
                port:
                  number: 3000
